# qt_chooser

./: .clang-format  .gitignore  CMakeLists.txt  README.md  helper.cpp  helper.h  main.cpp  makefile.pro  moveframe.ui  process.cpp  process.h  processframe.ui  service.cpp  service.h  settings.cpp  settings.h  stylesheet.cpp  symlinkframe.ui  tooling.cpp  wmi.cpp  wmi.h
qrc/: resources.qrc  stylesheet.css
src/: CMakeLists.txt  main.cpp  mainwidget.cpp  mainwidget.h  pg_conf.cpp  pg_conf.h  pg_version.cpp  pg_version.h  pg_widget.cpp  pg_widget.h  process.cpp  process.h  service.cpp  service.h  settings.cpp  settings.h  statelabel.cpp  statelabel.h  tooling.cpp  tooling.h  wmi.cpp  wmi.h  wmi_process.cpp  wmi_process.h  wmi_service.cpp  wmi_service.h  wmiservice.cpp
ui/: clusterwidget.ui  moveframe.ui  postgresframe.ui  postgresnotfound.ui  postgreswidget.ui  processframe.ui  processwidget.ui  serviceframe.ui
